fix: fixed make order controller and documentation
